[package]
name = "ubercopy"
version = "1.0.2"
authors = ["Jason White"]
description = "A tool to quickly and intelligently copy files based on a generated manifest"

[dependencies]
clap = "2.32"
duct = "0.11"
winapi = "0.2"
kernel32-sys = "0.2"
scoped-pool = "1"
log = "0.4"
log4rs = "0.7"
libc = "0.2"
